--- a/package.json
+++ b/package.json
@@ -1,16 +1,17 @@
 {
   "name": "metar-parser",
   "version": "1.0.0",
-  "description": "Parses METAR/SPECI weather information",
+  "description": "Parses METAR/SPECI weather reports",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "mocha ./test"
   },
   "author": "Raideer",
   "license": "ISC",
   "devDependencies": {
     "eslint": "^5.6.1",
     "eslint-config-eslint": "^5.0.1",
-    "eslint-plugin-node": "^7.0.1"
+    "eslint-plugin-node": "^7.0.1",
+    "mocha": "^5.2.0"
   }
 }
